[project]
name = "wuwa-team-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.0",
]

[project.scripts]
build = "scripts.wuwa_build:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
gui = [
    "pyside6>=6.10.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
